docs(reserve): adds route reserve status in Swagger Documentation
